--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "grunt": "^0.4.5",
+    "grunt-compile-handlebars": "^2.0.1",
     "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-sass": "^1.0.0"
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
