--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-compile-handlebars": "^2.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1"
